better fix  for canvas overflow

--- a/styles/default.css
+++ b/styles/default.css
@@ -1,5 +1,5 @@
 /*	General rules & fixes  */
-body,html{margin:0;padding:0;font-family: Helvetica, Arial;overflow: hidden;}
+body,html{margin:0;padding:0;font-family: Helvetica, Arial;}
 p {
 -webkit-margin-before: 0;
 -webkit-margin-after: 0;
@@ -15,6 +15,7 @@ h1{
 	color:#641150;
 }
 canvas{
+	display: block;
 	height:100%;
 	width:100%;
 
